[package]
name = "teensy41-kondo-ics"
version = "0.1.0"
authors = ["nop <noplab90@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
embedded-hal = "0.2.7"
# Remove me if you don't want logging.
log = "0.4.20"
teensy4-panic = "0.2.3"
cortex-m-rtic = "1.1.4"
rtic-monotonics = { version = "1.5.0", features = [
    "imxrt",
    "imxrt_gpt1",
    "imxrt_gpt2",
    "cortex-m-systick",
] }
nb = "1"
spin_on = "0.1.1"

[dependencies.teensy4-bsp]
version = "0.4.6"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
